Fixed/optimized skill wrapping

--- a/styles.css
+++ b/styles.css
@@ -279,11 +279,17 @@ body {
 
 /* Lists */
 .socials-list,
-.project-skills,
 .project-links-list {
   padding: 0px 0px;
   display: flex;
   gap: 10px;
+}
+
+.project-skills {
+  padding: 0px 0px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
 /* Removing defaults */
@@ -351,7 +357,6 @@ h2 {
   color: var(--svg-color);
   padding: 2px 8px;
   border-radius: 2px;
-  flex-wrap: wrap; 
 }
 
 .project-title {
